--- a/corp_loan.html
+++ b/corp_loan.html
@@ -6244,7 +6244,23 @@ Affirmative Covenants
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
+
 <script src="https://cdn.jsdelivr.net/npm/@uploadcare/upload-client@4.0.0-beta.0/dist/uploadcare.min.js"></script>
+<script>
+  const client = uploadcare.createClient({ publicKey: '6ba144327ef30beb9eab' });
+
+  async function uploadPdf(pdfBlob) {
+    const file = await client.uploadFile(pdfBlob, {
+      fileName: 'document.pdf',
+      contentType: 'application/pdf',
+    });
+
+    console.log('Uploaded file URL:', file.cdnUrl);
+    return file.cdnUrl;
+  }
+</script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
   emailjs.init('service_0gdnaog'); // Replace with your EmailJS user ID
@@ -6350,6 +6366,11 @@ async function generatePdfFromString(htmlString) {
 	const pdfArrayBuffer = pdf.output("arraybuffer");
 	
 const pdfBlob = pdf.output('blob');
+
+
+
+
+
 
 const uploadToUploadcare = async (blob) => {
   const client = uploadcare.createClient({ publicKey: '6ba144327ef30beb9eab' });
