--- a/corp_loan.html
+++ b/corp_loan.html
@@ -6246,19 +6246,6 @@ Affirmative Covenants
 
 
 <script src="https://cdn.jsdelivr.net/npm/@uploadcare/upload-client@4.0.0-beta.0/dist/uploadcare.min.js"></script>
-<script>
-  const client = uploadcare.createClient({ publicKey: '6ba144327ef30beb9eab' });
-
-  async function uploadPdf(pdfBlob) {
-    const file = await client.uploadFile(pdfBlob, {
-      fileName: 'document.pdf',
-      contentType: 'application/pdf',
-    });
-
-    console.log('Uploaded file URL:', file.cdnUrl);
-    return file.cdnUrl;
-  }
-</script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -6269,7 +6256,6 @@ Affirmative Covenants
 
 	<script>
 
-
 	let pdfDoc = null,
 	pageNum = 1,
 	pageRendering = false,
@@ -6277,8 +6263,6 @@ Affirmative Covenants
 	scale = 1.2,
 	canvas = document.getElementById("pdf-render"),
 	ctx = canvas.getContext("2d");
-
-
 
 async function generateTrustDocument(jsonData) {
 
@@ -6362,28 +6346,48 @@ async function generatePdfFromString(htmlString) {
     });
 
 
- 
+
 	const pdfArrayBuffer = pdf.output("arraybuffer");
-	
-const pdfBlob = pdf.output('blob');
+
+	const pdfBlob = pdf.output('blob');
 
 
 
-// Send email via EmailJS
-const sendEmail = async (downloadLink, name, address, email) => {
-  const templateParams = {
-    to_email: email,
-    user_name: name,
-    user_address: address,
-    pdf_link: downloadLink,
-  };
+	// Send email via EmailJS
+	const sendEmail = async (downloadLink, name, address, email) => {
+	const templateParams = {
+	to_email: email,
+	user_name: name,
+	user_address: address,
+	pdf_link: downloadLink,
+	};
 
   await emailjs.send('service_0gdnaog', 'template_3ykd1fk', templateParams);
 };
 
 (async () => {
   const pdfBlob = pdf.output('blob');
-  const downloadLink = await uploadPdf(pdfBlob);
+
+const formData = new FormData();
+    formData.append('UPLOADCARE_PUB_KEY', '6ba144327ef30beb9ea');
+    formData.append('UPLOADCARE_STORE', 'auto');
+    formData.append('metadata[subsystem]', 'uploader');
+    formData.append('metadata[pet]', 'cat');
+    formData.append('file', pdfBlob, 'generated.pdf'); // 👈 name it here
+
+    // Upload via fetch
+    try {
+      const response = await fetch('https://upload.uploadcare.com/base/', {
+        method: 'POST',
+        body: formData,
+      });
+
+      const result = await response.json();
+      console.log('Uploadcare response:', result);
+    } catch (err) {
+      console.error('Upload failed:', err);
+    }
+
 
   await sendEmail(downloadLink, 'Arthur', '123 Main St', 'averonque09@gmail.com');
   alert('Email sent with PDF link!');
