--- a/personal_loan.html
+++ b/personal_loan.html
@@ -596,8 +596,69 @@
 			<!--begin::Form-->
 			<form class="mx-auto mw-600px w-100 pt-15 pb-10" novalidate="novalidate" id="kt_create_account_form">
 			
-
 <div class="current" data-kt-stepper-element="content">
+<!--begin::Wrapper-->
+<div class="w-100">
+<!--begin::Heading-->
+<div class="pb-10 pb-lg-15">
+<!--begin::Title-->
+<h2 class="fw-bold text-gray-900"> Your Information
+</h2>
+<!--end::Title-->
+<!--begin::Notice-->
+<div class="text-muted fw-semibold fs-6">
+</div>
+<!--end::Notice-->
+</div>
+<!--end::Heading-->
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Full Name</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="full_name" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Address</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="address" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Email</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="your_email" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+					</div>
+					<!--end::Wrapper-->
+				</div>
+
+
+<div  data-kt-stepper-element="content">
 <!--begin::Wrapper-->
 <div class="w-100">
 <!--begin::Heading-->
@@ -1604,7 +1665,7 @@ No
 										<!--end::Card body-->
 									</div>
 
-								<div class="card">
+								<div class="card" id="pdf_preview" style="display:none;">
 									<div class="card-toolbar">
 														<ul class="nav nav-tabs nav-line-tabs nav-stretch border-transparent fs-5 fw-bold" id="kt_security_summary_tabs" role="tablist">
 															<li class="nav-item" role="presentation">
