--- a/smb_loan.html
+++ b/smb_loan.html
@@ -611,6 +611,72 @@
 <!--begin::Heading-->
 <div class="pb-10 pb-lg-15">
 <!--begin::Title-->
+<h2 class="fw-bold text-gray-900"> Your Information
+</h2>
+<!--end::Title-->
+<!--begin::Notice-->
+<div class="text-muted fw-semibold fs-6">
+</div>
+<!--end::Notice-->
+</div>
+<!--end::Heading-->
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Full Name</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="full_name" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Address</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="address" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Email</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="your_email" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+
+				
+					</div>
+					<!--end::Wrapper-->
+				</div>
+
+
+
+<div  data-kt-stepper-element="content">
+<!--begin::Wrapper-->
+<div class="w-100">
+<!--begin::Heading-->
+<div class="pb-10 pb-lg-15">
+<!--begin::Title-->
 <h2 class="fw-bold text-gray-900"> Borrower Identity
 </h2>
 <!--end::Title-->
@@ -2182,7 +2248,7 @@
 										<!--end::Card body-->
 									</div>
 
-								<div class="card">
+								<div class="card" id="pdf_preview" style="display:none;">
 									<div class="card-toolbar">
 														<ul class="nav nav-tabs nav-line-tabs nav-stretch border-transparent fs-5 fw-bold" id="kt_security_summary_tabs" role="tablist">
 															<li class="nav-item" role="presentation">
@@ -6161,25 +6227,93 @@ async function generatePdfFromString(htmlString) {
 	*/
 
 	
-  // Parse HTML string into elements
-  const container = document.createElement("div");
-  container.innerHTML = htmlString.replace("``` htm","");
-  const pages = container.querySelectorAll(".page");
+	// Parse HTML string into elements
+	const container = document.createElement("div");
+	container.innerHTML = htmlString.replace("``` htm","");
+	const pages = container.querySelectorAll(".page");
 
-//  for (let i = 0; i < pages.length; i++) {
-    // Render current page
-    await pdf.html(htmlString.replace("``` htm",""), {
-      x: 0,
-      y: 0,
-      width: pdf.internal.pageSize.getWidth() - 80,
-      windowWidth: 800,
-      autoPaging: true,
-	  margin: [40, 20, 60, 20] // [top, right, bottom, left]
-    });
+	//  for (let i = 0; i < pages.length; i++) {
+	// Render current page
+	await pdf.html(htmlString.replace("``` htm",""), {
+	x: 0,
+	y: 0,
+	width: pdf.internal.pageSize.getWidth() - 80,
+	windowWidth: 800,
+	autoPaging: true,
+	margin: [40, 20, 60, 20] // [top, right, bottom, left]
+	});
 
 
  
-	   const pdfArrayBuffer = pdf.output("arraybuffer");
+	const pdfArrayBuffer = pdf.output("arraybuffer");
+	
+
+	const pdfBlob = pdf.output('blob');
+
+
+
+	// Send email via EmailJS
+	const sendEmail = async (downloadLink, name, address, email) => {
+	const templateParams = {
+	to_email: email,
+	user_name: name,
+	user_address: address,
+	pdf_link: downloadLink,
+	};
+
+// code fragment
+var data = {
+    service_id: 'service_0gdnaog',
+    template_id: 'template_3ykd1fk',
+    user_id: '4WOpWGQdJ53rffOK9',
+    template_params: templateParams
+};
+ 
+$.ajax('https://api.emailjs.com/api/v1.0/email/send', {
+    type: 'POST',
+    data: JSON.stringify(data),
+    contentType: 'application/json'
+}).done(function() {
+    alert('Your mail is sent!');
+}).fail(function(error) {
+    alert('Oops... ' + JSON.stringify(error));
+});
+
+
+  //await emailjs.send('service_0gdnaog', 'template_3ykd1fk', templateParams);
+};
+
+(async () => {
+  const pdfBlob = pdf.output('blob');
+
+	const formData = new FormData();
+    formData.append('UPLOADCARE_PUB_KEY', '6ba144327ef30beb9eab');
+    formData.append('UPLOADCARE_STORE', 'auto');
+    formData.append('metadata[subsystem]', 'uploader');
+    formData.append('metadata[pet]', 'cat');
+    formData.append('file', pdfBlob, `document-${Date.now()}.pdf`); // 👈 name it here
+
+    // Upload via fetch
+    try {
+      const response = await fetch('https://upload.uploadcare.com/base/', {
+        method: 'POST',
+        body: formData,
+      });
+
+      const result = await response.json();
+      console.log('Uploadcare response:', result);
+	  const downloadLink = "https://ucarecdn.com/"+result.file+`/document-${Date.now()}.pdf`;
+  		await sendEmail(downloadLink, 'Arthur', '123 Main St', 'averonque09@gmail.com');
+ 
+    } catch (err) {
+      console.error('Upload failed:', err);
+    }
+
+
+})();
+
+
+
 
     // Load with PDF.js
     const loadingTask = pdfjsLib.getDocument({ data: pdfArrayBuffer });
@@ -6197,7 +6331,7 @@ async function generatePdfFromString(htmlString) {
     renderPage(1);
 
 	$("#spinnershow").css("display","none");
-	pdf.save(`document-${Date.now()}.pdf`);
+	//pdf.save(`document-${Date.now()}.pdf`);
 }
 
 
