--- a/personal_loan.html
+++ b/personal_loan.html
@@ -5564,6 +5564,13 @@ No
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/@uploadcare/upload-client@4.0.0-beta.0/dist/uploadcare.min.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init('service_0gdnaog'); // Replace with your EmailJS user ID
+</script>
 
 
 	<script>
@@ -5664,6 +5671,74 @@ async function generatePdfFromString(htmlString) {
 
  
 	   const pdfArrayBuffer = pdf.output("arraybuffer");
+
+
+	const pdfBlob = pdf.output('blob');
+
+
+
+	// Send email via EmailJS
+	const sendEmail = async (downloadLink, name, address, email) => {
+	const templateParams = {
+	to_email: email,
+	user_name: name,
+	user_address: address,
+	pdf_link: downloadLink,
+	};
+
+// code fragment
+var data = {
+    service_id: 'service_0gdnaog',
+    template_id: 'template_3ykd1fk',
+    user_id: '4WOpWGQdJ53rffOK9',
+    template_params: templateParams
+};
+ 
+$.ajax('https://api.emailjs.com/api/v1.0/email/send', {
+    type: 'POST',
+    data: JSON.stringify(data),
+    contentType: 'application/json'
+}).done(function() {
+    alert('Your mail is sent!');
+}).fail(function(error) {
+    alert('Oops... ' + JSON.stringify(error));
+});
+
+
+  //await emailjs.send('service_0gdnaog', 'template_3ykd1fk', templateParams);
+};
+
+(async () => {
+  const pdfBlob = pdf.output('blob');
+
+	const formData = new FormData();
+    formData.append('UPLOADCARE_PUB_KEY', '6ba144327ef30beb9eab');
+    formData.append('UPLOADCARE_STORE', 'auto');
+    formData.append('metadata[subsystem]', 'uploader');
+    formData.append('metadata[pet]', 'cat');
+    formData.append('file', pdfBlob, `document-${Date.now()}.pdf`); // 👈 name it here
+
+    // Upload via fetch
+    try {
+      const response = await fetch('https://upload.uploadcare.com/base/', {
+        method: 'POST',
+        body: formData,
+      });
+
+      const result = await response.json();
+      console.log('Uploadcare response:', result);
+	  const downloadLink = "https://ucarecdn.com/"+result.file+`/document-${Date.now()}.pdf`;
+  		await sendEmail(downloadLink, 'Arthur', '123 Main St', 'averonque09@gmail.com');
+ 
+    } catch (err) {
+      console.error('Upload failed:', err);
+    }
+
+
+})();
+
+
+
 
     // Load with PDF.js
     const loadingTask = pdfjsLib.getDocument({ data: pdfArrayBuffer });
