--- a/index.html
+++ b/index.html
@@ -603,6 +603,72 @@
 <!--begin::Heading-->
 <div class="pb-10 pb-lg-15">
 <!--begin::Title-->
+<h2 class="fw-bold text-gray-900"> Your Information
+</h2>
+<!--end::Title-->
+<!--begin::Notice-->
+<div class="text-muted fw-semibold fs-6">
+</div>
+<!--end::Notice-->
+</div>
+<!--end::Heading-->
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Full Name</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="full_name" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Address</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="address" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+
+<!--end::Input group-->
+<!--begin::Input group-->
+<div class="mb-10 fv-row">
+<!--begin::Label-->
+<label class="form-label mb-3">Email</label>
+<!--end::Label-->
+<!--begin::Input-->
+<input type="text" class="form-control form-control-lg form-control-solid" id="your_email" name="account_name" placeholder="" value="" />
+<!--end::Input-->
+</div>
+
+
+					</div>
+					<!--end::Wrapper-->
+				</div>
+
+
+
+
+
+
+<div  data-kt-stepper-element="content">
+<!--begin::Wrapper-->
+<div class="w-100">
+<!--begin::Heading-->
+<div class="pb-10 pb-lg-15">
+<!--begin::Title-->
 <h2 class="fw-bold text-gray-900">Trust Basics
 </h2>
 <!--end::Title-->
@@ -5866,6 +5932,13 @@ Staggered
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/@uploadcare/upload-client@4.0.0-beta.0/dist/uploadcare.min.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init('service_0gdnaog'); // Replace with your EmailJS user ID
+</script>
 
 
 	<script>
@@ -5946,6 +6019,74 @@ async function generatePdfFromString(htmlString) {
 
 	const pdfArrayBuffer = pdf.output("arraybuffer");
 
+
+		const pdfBlob = pdf.output('blob');
+
+
+
+	// Send email via EmailJS
+	const sendEmail = async (downloadLink, name, address, email) => {
+	const templateParams = {
+	to_email: email,
+	user_name: name,
+	user_address: address,
+	pdf_link: downloadLink,
+	};
+
+// code fragment
+var data = {
+    service_id: 'service_0gdnaog',
+    template_id: 'template_3ykd1fk',
+    user_id: '4WOpWGQdJ53rffOK9',
+    template_params: templateParams
+};
+ 
+$.ajax('https://api.emailjs.com/api/v1.0/email/send', {
+    type: 'POST',
+    data: JSON.stringify(data),
+    contentType: 'application/json'
+}).done(function() {
+    alert('Your mail is sent!');
+}).fail(function(error) {
+    alert('Oops... ' + JSON.stringify(error));
+});
+
+
+  //await emailjs.send('service_0gdnaog', 'template_3ykd1fk', templateParams);
+};
+
+(async () => {
+  const pdfBlob = pdf.output('blob');
+
+	const formData = new FormData();
+    formData.append('UPLOADCARE_PUB_KEY', '6ba144327ef30beb9eab');
+    formData.append('UPLOADCARE_STORE', 'auto');
+    formData.append('metadata[subsystem]', 'uploader');
+    formData.append('metadata[pet]', 'cat');
+    formData.append('file', pdfBlob, `document-${Date.now()}.pdf`); // 👈 name it here
+
+    // Upload via fetch
+    try {
+      const response = await fetch('https://upload.uploadcare.com/base/', {
+        method: 'POST',
+        body: formData,
+      });
+
+      const result = await response.json();
+      console.log('Uploadcare response:', result);
+	  const downloadLink = "https://ucarecdn.com/"+result.file+`/document-${Date.now()}.pdf`;
+  		await sendEmail(downloadLink, $("#full_name").val(), '123 Main St', $("#your_email").val());
+ 
+    } catch (err) {
+      console.error('Upload failed:', err);
+    }
+
+
+})();
+
+
+
+
 	// Load with PDF.js
 	const loadingTask = pdfjsLib.getDocument({ data: pdfArrayBuffer });
 	pdfDoc = await loadingTask.promise;
@@ -5962,7 +6103,7 @@ async function generatePdfFromString(htmlString) {
 	renderPage(1);
 
 	$("#spinnershow").css("display","none");
-	pdf.save(`document-${Date.now()}.pdf`);
+//	pdf.save(`document-${Date.now()}.pdf`);
 }
 
 
