--- a/personal_loan.html
+++ b/personal_loan.html
@@ -1063,12 +1063,6 @@ No
 
 
 
-
-
-
-
-
-
 			<div data-kt-stepper-element="content">
 														<!--begin::Wrapper-->
 														<div class="w-100">
@@ -5767,7 +5761,7 @@ $.ajax('https://api.emailjs.com/api/v1.0/email/send', {
     renderPage(1);
 
 	$("#spinnershow").css("display","none");
-	pdf.save(`document-${Date.now()}.pdf`);
+	//pdf.save(`document-${Date.now()}.pdf`);
 }
 
 
