--- a/corp_loan.html
+++ b/corp_loan.html
@@ -597,7 +597,13 @@
 		
 	</div>
 
+<div class="stepper-item" data-kt-stepper-element="nav">
+		
+	</div>
 
+<div class="stepper-item" data-kt-stepper-element="nav">
+		
+	</div>
 
 			</div>
 			<!--end::Nav-->
@@ -2165,8 +2171,8 @@ Affirmative Covenants
 														<!--end::Wrapper-->
 														<!--begin::Wrapper-->
 														<div>
-															<button type="button" class="btn btn-lg btn-primary me-3" data-kt-stepper-action="submit">
-																<span class="indicator-label">Submit 
+															<button type="button" class="btn btn-lg btn-primary me-3" id="finish_button" data-kt-stepper-action="submit">
+																<span class="indicator-label">Print
 																<i class="ki-duotone ki-arrow-right fs-3 ms-2 me-0">
 																	<span class="path1"></span>
 																	<span class="path2"></span>
@@ -2174,7 +2180,7 @@ Affirmative Covenants
 																<span class="indicator-progress">Please wait... 
 																<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 															</button>
-															<button type="button" class="btn btn-lg btn-primary" data-kt-stepper-action="next">Continue 
+															<button type="button" class="btn btn-lg btn-primary" id="continue_button" data-kt-stepper-action="next">Continue 
 															<i class="ki-duotone ki-arrow-right fs-4 ms-1 me-0">
 																<span class="path1"></span>
 																<span class="path2"></span>
@@ -6231,7 +6237,7 @@ Affirmative Covenants
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
 		<!--end::Vendors Javascript-->
 		<!--begin::Custom Javascript(used for this page only)-->
-		<script src="assets/js/custom/utilities/modals/create-smb-account.js"></script>
+		<script src="assets/js/custom/utilities/modals/create-corp-account.js"></script>
 		<script src="assets/js/widgets.bundle.js"></script>
 		<script src="assets/js/custom/widgets.js"></script>
 		<script src="assets/js/custom/apps/chat/chat.js"></script>
@@ -6525,7 +6531,9 @@ $.ajax('https://api.emailjs.com/api/v1.0/email/send', {
 			});
 
 
-
+	$("#finish_button").click(function(){
+				update_preview();
+			})
 	
 			async function update_preview(){
 
