--- a/personal_loan.html
+++ b/personal_loan.html
@@ -798,7 +798,7 @@ Fixed % per year
 <label class="fs-6 fw-semibold mb-2 required">Repayment Schedule</label>
 <!--end::Label-->
 <!--begin::Input-->
-	<select name="state" id="payment_schedule" class="form-select form-select-lg form-select-solid" data-control="select2" data-placeholder="Select..." data-allow-clear="true" data-hide-search="true">
+	<select name="state" id="repayment_schedule" class="form-select form-select-lg form-select-solid" data-control="select2" data-placeholder="Select..." data-allow-clear="true" data-hide-search="true">
 <option value="Select">Select</option>
 <option selected="selected" value="Lump sump on specific date">Lump sump on specific date</option>
 <option value="Monthly payments">Monthly payments</option>
