--- a/index.html
+++ b/index.html
@@ -6334,6 +6334,9 @@ $.ajax('https://api.emailjs.com/api/v1.0/email/send', {
 
 			});
 
+	$("#finish_button").click(function(){
+				update_preview();
+			});
 
 			async function update_preview(){
 
