--- a/personal_loan.html
+++ b/personal_loan.html
@@ -6061,12 +6061,13 @@ $.ajax('https://api.emailjs.com/api/v1.0/email/send', {
 				const lump_sum_specify_date = $("#lump_sum_specify_date").val();
 				const repayment_duration = $("#repayment_duration").val();
 
+				const repayment_duration_num = parseInt(repayment_duration.split(' ')[0]);
 
 				
 
 				const interest_rate_decimal  = parseFloat(interest_rate) / 100;
 
-				const monthly_payment = ((loan_amount * ((repayment_duration / 12) * interest_rate_decimal)) + loan_amount) / repayment_duration;
+				const monthly_payment = ((loan_amount * ((repayment_duration_num / 12) * interest_rate_decimal)) + loan_amount) / repayment_duration_num;
 
 
 				const loan_terms = {loan_amount: loan_amount, interest_rate:interest_rate, enter_rate_if_fixed:enter_rate_if_fixed,repayment_schedule:repayment_schedule,lump_sum_specify_date:lump_sum_specify_date,repayment_duration: repayment_duration, monthly_payment:monthly_payment};
