--- a/personal_loan.html
+++ b/personal_loan.html
@@ -5683,28 +5683,41 @@ async function generatePdfFromString(htmlString) {
 	*/
 
 	
-const container = document.createElement("div");
-container.innerHTML = htmlString.replace("``` htm", "");
+  // Parse HTML string into elements
+  const container = document.createElement("div");
+  container.innerHTML = `<style>
+  .page {
+    padding: 40px 20px 80px 20px; /* top, right, bottom, left */
+    box-sizing: border-box;
+    page-break-inside: avoid;
+    font-family: Arial, sans-serif;
+  }
+  h1, h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  p {
+    font-size: 18px;
+    margin-bottom: 12px;
+  }
+</style>`+htmlString.replace("``` htm","");
 
-// Optional: apply styles to ensure clean page breaks
-container.style.paddingBottom = "80px"; // give extra space at bottom
-container.style.boxSizing = "border-box";
 
-await pdf.html(container, {
-  x: 0,
-  y: 0,
-  width: pdf.internal.pageSize.getWidth() - 80,
-  windowWidth: 800,
-  autoPaging: true,
-  margin: [40, 20, 60, 20], // [top, right, bottom, left]
-  html2canvas: {
-    scale: 1,
-    useCORS: true,
-    scrollY: 0 // prevent scroll offset issues
-  },
-  callback: function (doc) {
-    // Optional: save or do something with the doc
-//    doc.save("output.pdf");
+  const pages = container.querySelectorAll(".page");
+
+//  for (let i = 0; i < pages.length; i++) {
+    // Render current page
+    await pdf.html(htmlString.replace("``` htm",""), {
+      x: 0,
+      y: 0,
+      width: pdf.internal.pageSize.getWidth() - 80,
+      windowWidth: 800,
+      autoPaging: true,
+	  margin: [40, 20, 60, 20] // [top, right, bottom, left]
+    });
+
+
+ 
 	   const pdfArrayBuffer = pdf.output("arraybuffer");
 
 
@@ -5772,12 +5785,6 @@ $.ajax('https://api.emailjs.com/api/v1.0/email/send', {
 
 
 })();
-
-
-
-  }
-});
-
 
 
 
