--- a/index.html
+++ b/index.html
@@ -590,6 +590,9 @@
 											<div class="stepper-item" data-kt-stepper-element="nav">
 														
 													</div>
+	<div class="stepper-item" data-kt-stepper-element="nav">
+														
+													</div>
 
 			</div>
 			<!--end::Nav-->
