--- a/index.html
+++ b/index.html
@@ -6019,6 +6019,20 @@ async function generatePdfFromString(htmlString) {
 
 
 
+  const pages = container.querySelectorAll(".page");
+
+//  for (let i = 0; i < pages.length; i++) {
+    // Render current page
+    await pdf.html(htmlString.replace("``` htm",""), {
+      x: 0,
+      y: 0,
+      width: pdf.internal.pageSize.getWidth() - 80,
+      windowWidth: 800,
+      autoPaging: true,
+	  margin: [40, 20, 60, 20] // [top, right, bottom, left]
+    });
+
+
 
     // Add a blank page after each render, except the last one
    // if (i < pages.length - 1) {
